<resources>
    <string name="app_name">Mobidoc</string>
    <string name="hello">Hello</string>
    <string name="user_image">user_image</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heart">Heart</string>
    <string name="_72">72</string>
    <string name="bpm">bpm</string>
    <string name="blood_oxygen">Blood Oxygen</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="_32">32</string>
    <string name="c">C</string>
    <string name="tips">HEALTH TIPS</string>
    <string name="dummy_hint">Remember to take at least 8 glasses of water each day.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_code_on_this_mobile_number">We will send you a One Time Code on this mobile number.</string>
    <string name="_254">+254-</string>
    <string name="dummy_number">1234567890</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to:</string>
    <string name="receive_the_otp">Didnt receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="name">NAME</string>
    <string name="username">Username</string>
    <string name="continue1">Continue</string>
    <string name="mmhg">mmHg</string>
    <string name="sp02">SpO2</string>
    <string name="one_one">101</string>
    <string name="eight_eight">88</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="maps">Maps</string>
    <string name="profile">PROFILE</string>
    <string name="dummy_bd">06/07/1990</string>
    <string name="dummy_gender">Male</string>
    <string name="name_">Name:</string>
    <string name="birhtday_">Date Of Birth:</string>
    <string name="gender_">Gender:</string>
    <string name="age_">Age:</string>
    <string name="phone_number_">Number:</string>
    <string name="change_profile_details">CHANGE PROFILE DETAILS</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="birthday">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="find_hospital_nearby">FIND HOSPITAL NEARBY</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">SAVE</string>
    <string name="change_photo">CHANGE PHOTO</string>
    <string name="fullname">FullName</string>
    <string name="sign_up_as_a">Sign Up as a</string>
    <string name="doctor">Doctor?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="your_example_com">your@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • •</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="a_few_details">We need a few details to get your account ready</string>
    <string name="fisrt_name">Fisrt Name</string>
    <string name="dummy_name">John</string>
    <string name="last_name">Last Name</string>
    <string name="dummy_name2">Doe</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="hospital">Hospital</string>
    <string name="dummy_hospital">John Hopkins Hospital</string>
    <string name="doctor_s_profile">DOCTOR\'S PROFILE</string>
    <string name="patient_s_profile">PATIENT\'S PROFILE</string>
    <string name="email_">Email:</string>
    <string name="hospital_">Hospital:</string>
    <string name="specialization_">Specialization:</string>
    <string name="dummy_specialization">CardioVascular Diseases</string>
    <string name="dummy_gender_">Female</string>
    <string name="specialization">Specialization</string>
    <string name="issue">Issue</string>
    <string name="notifications">Notifications</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="patients">PATIENTS</string>
    <string name="notification">Notification</string>
    <string name="feeds">FEEDS</string>
    <string name="post">POST</string>
    <string name="caption">CAPTION</string>
    <string name="time_to_take">Time to take&#160;</string>
    <string name="medicine_name">Medicine name</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="take">Take</string>
    <string name="time">Time</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="dosage_summary">Dosage</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="string_time">Time</string>
    <string name="medicine_name_hint">Medicine name</string>
    <string name="string_from">From</string>
    <string name="string_schedule">Schedule</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="thrice_a_day">Thrice a day</string>
    <string name="_4_times_a_day">4 times a day</string>
    <string name="_5_times_per_day">5 times per day</string>
    <string name="number_of_total_doses">Number of total doses</string>
    <string name="sample_date">Thu, September 13 2018</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="alarm">Alarm</string>
    <string name="both">Both</string>
    <string name="alert_type">Alert type</string>

</resources>