<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutNotification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfileNotification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/imageProfileNotification"
        android:layout_toStartOf="@id/textIssue">

        <TextView
            android:id="@+id/textUserNameNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/textIssueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue"
            android:textSize="15sp"
            android:fontFamily="@font/ubuntu_medium"
            android:maxLines="5"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp02"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_regular"
        android:textColor="@color/colorBlack"
        android:contentDescription="@string/app_name"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>