<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".Authentication.PhoneOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            app:lottie_rawRes="@raw/message_sent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginTop="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_a_one_time_code_on_this_mobile_number"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="Enter Mobile Number"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/colorBlack"
            android:includeFontPadding="false"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/_254"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/ubuntu_medium"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextInputNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/dummy_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:importantForAutofill="no"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorDivider"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGetOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/get_otp"
                android:fontFamily="@font/ubuntu_bold"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:visibility="gone"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>